<resources>
    <string name="app_name">LoginApp</string>
    <string name="username">Username</string>
    <string name="titleimage">TitleImage</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="inside_android">Inside Android</string>
    <string name="welcome">Welcome</string>
    <string name="info">
        Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for devices such as smartphones and tablets. \n\nAndroid is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google.
    </string>
    <string name="next">Next</string>
    <string name="androids">Androids</string>
    <string name="done">Done</string>
    <string name="os_list_1_1">Name</string>
    <string name="os_list_1_2">Version</string>
    <string name="os_list_2_1">Android 1.0</string>
    <string name="os_list_2_2">1.0</string>
    <string name="os_list_3_1">Android 1.1</string>
    <string name="os_list_3_2">1.1</string>
    <string name="os_list_4_1">Android Cupcake</string>
    <string name="os_list_4_2">1.5</string>
    <string name="os_list_5_1">Android Donut</string>
    <string name="os_list_5_2">1.6</string>
    <string name="os_list_6_1">Android Eclair</string>
    <string name="os_list_6_2">2.0 - 2.1</string>
    <string name="os_list_7_1">Android Froyo</string>
    <string name="os_list_7_2">2.2 - 2.2.3</string>
    <string name="os_list_8_1">Android Gingerbread</string>
    <string name="os_list_8_2">2.3 - 2.3.7</string>
    <string name="os_list_9_1">Android Honeycomb</string>
    <string name="os_list_9_2">3.0 - 3.2.6</string>
    <string name="os_list_10_1">Android Ice Cream Sandwich</string>
    <string name="os_list_10_2">4.0 - 4.0.4</string>
    <string name="os_list_11_1">Android Jelly Bean</string>
    <string name="os_list_11_2">4.1 - 4.3.1</string>
    <string name="os_list_12_1">Android Kitkat</string>
    <string name="os_list_12_2">4.4 - 4.4W.2</string>
    <string name="os_list_13_1">Android Lollipop</string>
    <string name="os_list_13_2">5.0 - 5.1.1</string>
    <string name="os_list_14_1">Android Marshmallow</string>
    <string name="os_list_14_2">6.0 - 6.0.1</string>
    <string name="os_list_15_1">Android Nougat</string>
    <string name="os_list_15_2">7.0 - 7.1.2</string>
    <string name="os_list_16_1">Android Oreo</string>
    <string name="os_list_16_2">8.0 - 8.1</string>
    <string name="os_list_17_1">Android Pie</string>
    <string name="os_list_17_2">9</string>
    <string name="os_list_18_1">Android 10</string>
    <string name="os_list_18_2">10</string>
    <string name="os_list_19_1">Andorid 11</string>
    <string name="os_list_19_2">11</string>
    <string name="os_list_20_1">Android 12</string>
    <string name="os_list_20_2">12</string>
    <string name="incorrect_username_or_password">Incorrect Username or Password</string>
</resources>