<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".OSList">

    <TextView
        android:id="@+id/android_textView"
        android:layout_width="290dp"
        android:layout_height="81dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/billabong"
        android:text="@string/androids"
        android:textAlignment="center"
        android:textColor="#E2F7FF"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="379dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:clipToPadding="true"
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/done_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android_textView"
        app:layout_constraintVertical_bias="1.0">

        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_1_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_1_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_2_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_2_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_3_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_3_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_4_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_4_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_5_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_5_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_6_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_6_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_7_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_7_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_8_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_8_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_9_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_9_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_10_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_10_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_11_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_11_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_12_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_12_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_13_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_13_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_14_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_14_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_15_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_15_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_16_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_16_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_17_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_17_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_18_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_18_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_19_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_19_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_20_1"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/os_list_20_2"
                    android:textColor="#E2F7FF"
                    android:textSize="20sp" />

            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/done_btn"
        android:layout_width="109dp"
        android:layout_height="59dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:text="@string/done"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#E2F7FF"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>