<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="344dp"
        android:layout_height="115dp"
        android:fontFamily="@font/billabong"
        android:text="@string/inside_android"
        android:textAlignment="center"
        android:textColor="#E2F7FF"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <EditText
        android:id="@+id/user_textView_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:backgroundTint="#E2F7FF"
        android:drawableStart="@drawable/usericon"
        android:ems="10"
        android:foregroundTint="#E2F7FF"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#E2F7FF"
        android:textColorHighlight="#48CBFD"
        android:textColorHint="#E2F7FF"
        android:textColorLink="#48CBFD"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView" />

    <EditText
        android:id="@+id/pass_textView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:backgroundTint="#E2F7FF"
        android:drawableStart="@drawable/passicon"
        android:ems="10"
        android:foregroundTint="#E2F7FF"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#E2F7FF"
        android:textColorHighlight="#48CBFD"
        android:textColorHint="#E2F7FF"
        android:textColorLink="#48CBFD"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_textView_login" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#E2F7FF"
        android:textColorHighlight="#48CBFD"
        android:textColorLink="#48CBFD"
        android:textSize="24sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_textView"
        app:strokeColor="#E2F7FF"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/forgotPassword_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        android:fontFamily="sans-serif"
        android:outlineProvider="none"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="#E2F7FF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_textView" />

    <TextView
        android:id="@+id/accountSignUp_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:letterSpacing="0.0892"
        android:text="@string/don_t_have_an_account"
        android:textAllCaps="false"
        android:textColor="#E2F7FF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <Button
        android:id="@+id/signUp_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        android:fontFamily="sans-serif"
        android:outlineProvider="none"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#E2F7FF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/error_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:letterSpacing="0.0892"
        android:text="@string/incorrect_username_or_password"
        android:textAlignment="center"
        android:textColor="#FF415C"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>