<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/welcome_textView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/billabong"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#E2F7FF"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <TextView
        android:id="@+id/user_textView_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="#E2F7FF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="374dp"
        android:layout_height="344dp"
        android:layout_marginTop="56dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="#E2F7FF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_textView_home" />

    <Button
        android:id="@+id/next_btn_home"
        android:layout_width="109dp"
        android:layout_height="59dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:text="@string/next"
        android:textColor="#E2F7FF"
        android:textSize="20sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#E2F7FF"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>